--- a/paisajes.html
+++ b/paisajes.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,user-scalable=no">
-<title>Comenzando con la Fotografía </title>
-<link rel="stylesheet" href="css/estilo.css" type="text/css">
+<title>Paisajes</title>
+<link rel="stylesheet" href="css/paisajes.css" type="text/css">
 </head>
 
 <body>
@@ -14,26 +14,38 @@
 <nav>
 <table width="70" border="0" align="center" cellpadding="3" cellspacing="10">
   <tr>
-    <td><a id="nosub" href="index.html">Inicio </a></td>
-    <td><a href="paisajes.html"> Paisajes </a></td>
+    <td><a href="index.html">Inicio </a></td>
+    <td><a id="nosub" href="paisajes.html"> Paisajes </a></td>
     <td><a href="retratos.html">Retratos</a></td>
   </tr>
 </table>
 </nav>
 </header>
-<Section id="central">
+<!--<Section id="central">
 <img src="imagenes/robots.jpg" alt="imagen central" class="img1">
-</Section>
-<Section class="secundaria">
-<article class="secundaria1"> <a href="paisajes.html"><img class="img2" src="imagenes/mip-robot.jpg" alt="3 robots"></a>
-<br>
-<a href="paisajes.html">Paisajes</a>
+</Section>-->
+<div id="paisajes">
+<section>
+<article id="paisaje1">
+<img src="imagenes/machinescape_bancodeimagenes.name.jpg" alt="paisaje1"class="psj1">
 </article>
-<article class="secundaria2"> <a href="retratos.html"><img class="img3" src="imagenes/robotblog.jpg" alt="robot 2"></a>
-<br>
-<a href="retratos.html">Retratos</a>
+<article id="paisaje2">
+<img class="psj2" src="imagenes/machinescape_bancodeimagenes.name.jpg" alt="paisaje1">
 </article>
-</Section>
+<article id="paisaje3">
+<img class="psj3" src="imagenes/machinescape_bancodeimagenes.name.jpg" alt="paisaje1">
+</article>
+<article id="paisaje4">
+<img class="psj4" src="imagenes/machinescape_bancodeimagenes.name.jpg" alt="paisaje1">
+</article>
+<article id="paisaje5">
+<img class="psj5" src="imagenes/machinescape_bancodeimagenes.name.jpg" alt="paisaje1">
+</article>
+<article id="paisaje6">
+<img class="psj6" src="imagenes/machinescape_bancodeimagenes.name.jpg" alt="paisaje1">
+</article>
+</section>
+</div>
 <!--PIE-->
 <footer>
 <section class="pie">
@@ -59,7 +71,7 @@
     <td align="left" valign="middle"><a href="https://twitter.com/Leo_Lalia">Twitter</a></td>
   </tr>
   <tr>
-    <td align="left" valign="middle"><a href="https://www.instagram.com"><img src="imagenes/int.png" width="22" height="22" alt="ins"></a></td>
+    <td align="left" valign="middle"><a href="http://www.instagram.com"><img src="imagenes/int.png" width="22" height="22" alt="ins"></a></td>
     <td align="left" valign="middle"><a href="https://www.instagram.com">Instagram</a></td>
   </tr>
 </table>
